// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletedList should render correctly from ltr 1`] = `
.emotion-0 {
  margin-top: 0;
  list-style-type: none;
}

.emotion-0>li {
  position: relative;
  color: #3F3F42;
}

.emotion-0>li::before {
  top: 0.5rem;
  content: "";
  position: absolute;
  border-width: 1rem;
}

.emotion-0>li::before {
  border: 0.1875rem solid #3F3F42;
  background-color: #3F3F42;
  border-radius: 50%;
  inset-inline-start: -1rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

<div>
  <ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
      role="listitem"
    >
      First item on the list
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      Second item on the list
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      Final list item
    </li>
  </ul>
</div>
`;

exports[`BulletedList should render correctly from rtl 1`] = `
.emotion-0 {
  margin-top: 0;
  list-style-type: none;
}

.emotion-0>li {
  position: relative;
  color: #3F3F42;
}

.emotion-0>li::before {
  top: 0.5rem;
  content: "";
  position: absolute;
  border-width: 1rem;
}

.emotion-0>li::before {
  border: 0.1875rem solid #3F3F42;
  background-color: #3F3F42;
  border-radius: 50%;
  inset-inline-start: -1rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

<div>
  <ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
      role="listitem"
    >
      العنصر الأول في القائمة
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      البند الثاني في القائمة
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      عنصر القائمة النهائية
    </li>
  </ul>
</div>
`;

exports[`BulletedList should render correctly with custom bulletPointShape and bulletPointColour 1`] = `
.emotion-0 {
  margin-top: 0;
  list-style-type: none;
}

.emotion-0>li {
  position: relative;
  color: #3F3F42;
}

.emotion-0>li::before {
  top: 0.5rem;
  content: "";
  position: absolute;
  border-width: 1rem;
}

.emotion-0>li::before {
  border: 0.1875rem solid #f00;
  background-color: #f00;
  border-radius: 0;
  inset-inline-start: -1rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

<div>
  <ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
      role="listitem"
    >
      First item on the list
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      Second item on the list
    </li>
    <li
      class="emotion-1"
      role="listitem"
    >
      Final list item
    </li>
  </ul>
</div>
`;
